# Flowey

./: .gitignore  README.md  compose.yaml  flake.nix  package-lock.json  package.json  skaffold.yaml
.github/workflows/: Build & Deploy.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  deployment.yaml  flowey.go  go.mod  go.sum  go.work  handler.go  main.go  pyproject.toml  requirements-dev.txt  requirements.txt  server.go
backend/cli/: go.mod  main.go
backend/client/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  ws.js
backend/db/: add.go  close.go  globals.go  init.go  main.go  prepare.go  session.go  state.go
backend/server/: .gitignore  Dockerfile  go.mod  handler.go  main.go  mux.go  server.go  session.go  ws.go
backend/server/internal/: handler.go  server.go
backend/src/flowey/: __init__.py
backend/src/flowey/server/: __init__.py
backend/utils/: data.go  slice.go
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  Counter.vue  index.ts  state.ts  utils.ts
frontend/src/components/: BuffButton.vue  Button.vue  Counter.vue  Text.vue
frontend/src/components/buttons/: BuffButton.vue  DecreaseMaxTimeButton.vue  IncreaseMaxTimeButton.vue  (+3 more)
landing/: Dockerfile  deployment.yaml  index.html
landing/src/: index.html
pwa/: Dockerfile  deployment.yaml  index.html  package-lock.json  package.json  vite.config.ts
pwa/src/: index.ts  state.ts  store.ts  utils.ts  ws.ts  wss.ts
pwa/src/components/: Block.vue  Box.vue  Button.vue  Counter.vue  Timer.vue
reverse-proxy/: Dockerfile
reverse-proxy/templates/: flowey.conf.template
src/components/: App.vue  Block.vue  Box.vue
src/components/buttons/: IncreaseMaxTimeButton.vue
(+9 files in other folders)
